--- a/PC/html/new/commentList.html
+++ b/PC/html/new/commentList.html
@@ -343,6 +343,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 						<li>아직, 작성하지 않은 상품평이 있다면 상품평을 남겨주세요.</li> 
 						<li>재구매 및 상품 정보를 확인하시려면 상품명을 선택하면 상품 상세화면으로 이동합니다.</li> 
 				    </ul>
+
+                    <div>
+                        <h4 class="page_title mgt80">등록 가능한 상품평 <span class="only_english">1999</span>건 </h4>
+                        
+                    </div>
 				    <div class="tbl_desc mgt50">현재 <em>0</em> 건의 상품평이 등록되어 있습니다.</div>
 				    <table class="bbs_list01">
 				        <caption>내 상품평 <span>작성일자, 상품, 제목, 평점, 수정/삭제</span></caption>
