--- a/PC/path_now.html
+++ b/PC/path_now.html
@@ -1693,7 +1693,7 @@ th.row-headers-background {
         <td class="s16">좋아요내역보기 좋아요브랜드</td>
         <td class="s10"></td>
         <td class="s17"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/newlistWishBrand.html">./html/newlistWishBrand.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/listWishBrand.html">./html/new/listWishBrand.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
         <td class="s4"></td>
