--- a/PC/html/new/deposit2.html
+++ b/PC/html/new/deposit2.html
@@ -345,7 +345,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="box_gray02 delivery_detail mgt15 regular">
                         <span class="bold">교보핫트랙스 온라인 예치금은 현재</span>
                         <span class="mgl10 order_num only_english color_01 bold">88,264,100</span>
-                        <span calss="">원 입니다.</span>
+                        <span class="">원 입니다.</span>
                     </div>
                     <!-- <div class="box_gray02 mgb0 bt_line fs16">회원님의 교보핫트랙스 온라인 예치금은 현재 <span class="order_num">88,264,100원</span> 입니다.</div>
                     <div class="bt_line"></div> -->
@@ -368,7 +368,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 				    <div class="tab_cont mgt20">
 				    	<h4 class="hidden_obj">환불신청내역</h4>
-			            <table class="bbs_list_v2">
+			            <table class="bbs_list_v2 space_pad border">
 			                <caption>환불신청내역 <span>신청일,신청금액,처리상태,처리일</span></caption>
 			                <colgroup>
 			                    <col style="width:25%" />
@@ -386,10 +386,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			                </thead>
 			                <tbody>
                                 <tr> 
-                                    <td calss="only_english">2019.12.06</td> 
+                                    <td class="only_english">2019.12.06</td> 
                                     <td>주문</td>
-                                    <td class="color_01"><span calss="only_english base">46,800</span>원</td> 
-                                    <td calss="only_english">191206000004</td>
+                                    <td class="color_01"><span class="only_english base">46,800</span>원</td> 
+                                    <td class="only_english">191206000004</td>
                                 </tr>
 			                    <tr><td colspan="4" class="no_data">환불신청내역이 없습니다.</td></tr>
 			                </tbody>
