--- a/PC/html/new/returnExchange_detail.html
+++ b/PC/html/new/returnExchange_detail.html
@@ -371,7 +371,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         </div>
                         <!-- <h4 class="tit01">상품선택</h4> -->
                         <!-- <div class="tbl_top">반품/교환 신청은 발송완료일로부터 7일 이내에 가능합니다. <a href="javascript://" class="btn_type01" onclick="rtnExchangeSearch()">반품교환상품조회</a></div> -->
-                        <table class="bbs_list01 mgt20">
+                        <table class="bbs_list_v2 space_pad mgt20">
                             <caption>상품선택 <span>주문번호, 상품, 가격, 신청수량</span></caption>
                             <colgroup>
                                 <col style="width:160px" />
