--- a/PC/html/new/totsaved.html
+++ b/PC/html/new/totsaved.html
@@ -342,7 +342,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="box_gray02 delivery_detail mgt15 regular">
                         <span class="bold">회원님의 통합포인트는 현재</span>
                         <span class="mgl10 order_num only_english color_01 bold">0</span>
-                        <span calss="">원 입니다.</span>
+                        <span class="">원 입니다.</span>
                     </div>
 
                     <h4 class="page_title mgt80">통합포인트 관련 안내</h4>
