--- a/PC/html/new/commentList.html
+++ b/PC/html/new/commentList.html
@@ -337,41 +337,96 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <!-- //lnb -->
                 <!-- sub contents -->
                 <div class="sub_contents">
-                    <h3 class="page_title mgt0">내 상품평 관리</h3>
+                    <h3 class="page_title mgt0 border">내 상품평 관리</h3>
 				   	<ul class="list_type02_v2 mgt20 mgb60">
 						<li>고객님께서 등록하신 상품평을 확인하실 수 있습니다.</li> 
 						<li>아직, 작성하지 않은 상품평이 있다면 상품평을 남겨주세요.</li> 
 						<li>재구매 및 상품 정보를 확인하시려면 상품명을 선택하면 상품 상세화면으로 이동합니다.</li> 
 				    </ul>
 
-                    <div>
-                        <h4 class="page_title mgt80">등록 가능한 상품평 <span class="only_english">1999</span>건 </h4>
-                        
-                    </div>
-				    <div class="tbl_desc mgt50">현재 <em>0</em> 건의 상품평이 등록되어 있습니다.</div>
-				    <table class="bbs_list01">
-				        <caption>내 상품평 <span>작성일자, 상품, 제목, 평점, 수정/삭제</span></caption>
+                    <h4 class="page_title border mgb0 mgt80">등록 가능한 상품평 <span class="only_english">1999</span>건 </h4>
+
+				    <!-- <div class="tbl_desc mgt50">현재 <em>0</em> 건의 상품평이 등록되어 있습니다.</div> -->
+				    <table class="bbs_list_v2 space_pad ">
+				        <caption>등록가능한 상품평 <span>주문일자, 주문번호, 주문상품, 주문금액, 상태</span></caption>
 				        <colgroup>
-				            <col style="width:90px">
-				            <col style="width:100px">
+				            <col style="width:120px">
+				            <col style="width:140px">
 				            <col style="width:*">
 				            <col style="width:110px">
-				            <col style="width:70px">
+				            <col style="width:150px">
 				        </colgroup>
 				        <thead>
 				            <tr>
-				                <th scope="col" class="fir">작성일자</th>
-				                <th scope="col">상품</th>
-				                <th scope="col">제목</th>
-				                <th scope="col">평점</th>
-				                <th scope="col" class="last"></th>
+				                <th scope="col" class="fir">주문일자</th>
+				                <th scope="col">주문번호</th>
+				                <th scope="col">주문상품</th>
+				                <th scope="col">주문금액</th>
+				                <th scope="col" class="last">상태</th>
 				            </tr>
 				        </thead>
 				        <tbody>
-				            
-				            <tr><td colspan="4" class="no_data">내 상품평 내역이 없습니다.</td></tr>
+                            <tr>
+                                <td class="only_english">2020.11.18</td>
+                                <td><a href="javascript:;" class="only_english">2310042665814</a></td>
+                                <td>로이텀 미디엄 노트 뮤트 데님</td> 
+                                <td class="color_01"><span class="only_english base">234500</span>원</td> 
+                                <td>
+                                    <a href="javascript:;" class="btn_type05_v2 bg">상품평 작성</a>
+                                </td>
+                            </tr>
+                            <tr><td colspan="5" class="no_data">내 상품평 내역이 없습니다.</td></tr>
 				        </tbody>
 				    </table>
+
+                    <!-- paging -->
+                    <div class="paging cs mgt40">
+                        <a title="맨 처음 페이지로 이동" href="#n" class="first">처음</a>
+                        <ul>
+                            <li class="active"><a href="#n">1</a></li>
+                        </ul>
+                    </div>
+                    <!-- //paging -->
+
+                    <h4 class="page_title border mgb0 distance">등록하신 상품평 <span class="only_english">1999</span>건 </h4>
+                    <table class="bbs_list_v2 space_pad ">
+                        <caption>등록하신 상품평 <span>작성일자, 상품명, 상품평, 삭제 </span></caption>
+                        <colgroup>
+                            <col style="width:120px">
+                            <col style="width:*">
+                            <col style="width:140px">
+                            <col style="width:150px">
+                        </colgroup>
+                        <thead>
+                            <tr>
+                                <th scope="col" class="fir">작성일자</th>
+                                <th scope="col">상품명</th>
+                                <th scope="col">상품평</th>
+                                <th scope="col" class="last">상태</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td class="only_english">2020.11.18</td>
+                                <td>로이텀 미디엄 노트 뮤트 데님</td> 
+                                <td class="color_01"><span class="only_english base">234500</span>원</td> 
+                                <td>
+                                    <a href="javascript:;" class="btn_type05_v2 bg small">삭제</a>
+                                </td>
+                            </tr>
+                            <tr><td colspan="4" class="no_data">내 상품평 내역이 없습니다.</td></tr>
+                        </tbody>
+                    </table>
+
+                    <!-- paging -->
+                    <div class="paging cs mgt40">
+                        <a title="맨 처음 페이지로 이동" href="#n" class="first">처음</a>
+                        <ul>
+                            <li class="active"><a href="#n">1</a></li>
+                        </ul>
+                    </div>
+                    <!-- //paging -->
+
                 </div>
                 <!-- //sub contents -->                
             </div>
