--- a/PC/html/new/commentPopup.html
+++ b/PC/html/new/commentPopup.html
@@ -37,6 +37,13 @@
             $(this).closest('.file_input').find('input').val('');
             $(this).closest('.file_input').removeClass('clear');
         });
+
+        // 별체크
+        $('.star_grade_wrap a').click(function(){
+            $(this).parent().children("a").removeClass("active");  /* 별점의 active 클래스 전부 제거 */ 
+            $(this).addClass("active").prevAll("a").addClass("active"); /* 클릭한 별과, 그 앞 까지 별점에 on 클래스 추가 */
+            return false;
+        });
     })
 </script>
 </head>
@@ -70,29 +77,43 @@
                             <li>우수 상품평을 작성해주신 분께는 매월 100분 추첨하여 25% 쿠폰을 드립니다.</li>
                             <li><span class="color_01">EVENT. 포토후기+30글자 이상 정성스러운 후기 입력시 400포인트 증정! (기간 : 2021.01.11-01.18)</span></li>
                         </ul>
-
                         <h2 class="tit01 mgt50 medium">만족도를 선택해 주세요.</h2>
                         <div class="satisfaction_check_wrap">
                             <ul class="pop_star_wrap">
                                 <li>
                                     <strong>실용성</strong>
-                                    <span>
+                                    <div class="star_grade_wrap">
+                                        <a href="javascript:;" class="star_unit">1</a>
+                                        <a href="javascript:;" class="star_unit">2</a>
+                                        <a href="javascript:;" class="star_unit">3</a>
+                                        <a href="javascript:;" class="star_unit">4</a>
+                                        <a href="javascript:;" class="star_unit">5</a>
+                                    </div>
+                                    <!-- <span>
                                         <label for="customer-satisfaction1-1"><input type="radio" name="practicality" value="1" id="customer-satisfaction1-1" /> <span class="pop_star_grade star1">만족도별1개</span></label>
                                         <label for="customer-satisfaction1-2"><input type="radio" name="practicality" value="2" id="customer-satisfaction1-2" /> <span class="pop_star_grade star2">만족도별2개</span></label>
                                         <label for="customer-satisfaction1-3"><input type="radio" name="practicality" value="3" id="customer-satisfaction1-3" /> <span class="pop_star_grade star3">만족도별3개</span></label>
                                         <label for="customer-satisfaction1-4"><input type="radio" name="practicality" value="4" id="customer-satisfaction1-4" /> <span class="pop_star_grade star4">만족도별4개</span></label>
                                         <label for="customer-satisfaction1-5"><input type="radio" name="practicality" value="5" id="customer-satisfaction1-5" /> <span class="pop_star_grade star5">만족도별5개</span></label>
-                                    </span>
+                                    </span> -->
                                 </li>
-                                <li class="c_both">
+                                <li class="c_both mgt40">
                                     <strong>디자인</strong>
-                                    <span>
+                                    <ul class="star_grade_wrap">
+                                        <a href="javascript:;" class="star_unit">1</a>
+                                        <a href="javascript:;" class="star_unit">2</a>
+                                        <a href="javascript:;" class="star_unit">3</a>
+                                        <a href="javascript:;" class="star_unit">4</a>
+                                        <a href="javascript:;" class="star_unit">5</a>
+                                    </ul>    
+
+                                    <!-- <span>
                                         <label for="customer-satisfaction2-1"><input type="radio" name="design" value="1" id="customer-satisfaction2-1" /> <span class="pop_star_grade star1">만족도별1개</span></label>
                                         <label for="customer-satisfaction2-2"><input type="radio" name="design" value="2" id="customer-satisfaction2-2" /> <span class="pop_star_grade star2">만족도별2개</span></label>
                                         <label for="customer-satisfaction2-3"><input type="radio" name="design" value="3" id="customer-satisfaction2-3" /> <span class="pop_star_grade star3">만족도별3개</span></label>
                                         <label for="customer-satisfaction2-4"><input type="radio" name="design" value="4" id="customer-satisfaction2-4" /> <span class="pop_star_grade star4">만족도별4개</span></label>
                                         <label for="customer-satisfaction2-5"><input type="radio" name="design" value="5" id="customer-satisfaction2-5" /> <span class="pop_star_grade star5">만족도별5개</span></label>
-                                    </span>
+                                    </span> -->
                                 </li>
                             </ul>
                         </div>
