--- a/PC/html/new/saved2.html
+++ b/PC/html/new/saved2.html
@@ -344,7 +344,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="box_gray02 delivery_detail mgt15 regular">
                         <span class="bold">회원님의 마일리지는 현재</span>
                         <span class="mgl10 order_num only_english color_01 bold">0</span>
-                        <span calss="">원 입니다.</span>
+                        <span class="">원 입니다.</span>
                     </div>
 
                     <h4 class="page_title mgt80">마일리지 관련 안내</h4>
@@ -380,7 +380,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </div>
                     <div id="tab_cont_1" class="tab_cont mgt20">
                         <h4 class="hidden_obj">사용 마일리지</h4>
-                        <table class="bbs_list_v2">
+                        <table class="bbs_list_v2 space_pad border">
                             <caption>사용 마일리지 <span>변동일, 변동사유, 마일리지, 주문번호</span></caption>
                             <colgroup>
                                 <col style="width:25%" />
