--- a/PC/path_now.html
+++ b/PC/path_now.html
@@ -1423,7 +1423,7 @@ th.row-headers-background {
       <tr style='height:29px;'>
         <th id="2024277320R4" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">5</div></th>
         <td class="s14"></td>
-        <td class="s15" dir="ltr" rowspan="34">마이핫트랙스</td>
+        <td class="s15" dir="ltr" rowspan="35">마이핫트랙스</td>
         <td class="s16" rowspan="1">마이핫트랙스 메인</td>
         <td class="s16" dir="ltr"></td>
         <td class="s10"></td>
@@ -1677,8 +1677,8 @@ th.row-headers-background {
       <tr style='height:29px;'>
         <th id="2024277320R5" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">6</div></th>
         <td class="s14"></td>
-        <td class="s16" dir="ltr" rowspan="5">쇼핑리스트</td>
-        <td class="s16" rowspan="3">내 좋아요 관리</td>
+        <td class="s16" dir="ltr" rowspan="6">쇼핑리스트</td>
+        <td class="s16" rowspan="4">내 좋아요 관리</td>
         <td class="s10">좋아요내역보기 좋아요상품</td>
         <td class="s16"></td>
         <td class="s17"></td>
@@ -1705,6 +1705,17 @@ th.row-headers-background {
         <td class="s10"></td>
         <td class="s17"></td>
         <td class="s18" dir="ltr"><a target="_blank" href="./html/new/listWishGood.html">./html/new/listWishGood.html</a></td>
+        <td class="s19" dir="ltr">완료</td>
+        <td class="s16"></td>
+        <td class="s4"></td>
+      </tr>
+      <tr style='height:29px;'>
+        <th id="2024277320R5" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">6</div></th>
+        <td class="s14"></td>
+        <td class="s16">좋아요 blank</td>
+        <td class="s10"></td>
+        <td class="s17"></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/listWish_blank.html">./html/new/listWish_blank.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
         <td class="s4"></td>
