--- a/MOBILE/html/new/funding_main.html
+++ b/MOBILE/html/new/funding_main.html
@@ -546,101 +546,107 @@ $(document).ready(function(){
 					<p class="txt">가장 핫한 상품들을 핫트딜 하세요!<br>현재 진행중인 핫트딜 상품들을 만나보세요!</p>
 				</div>
 				<div class="stuff_detail_wrap">
-					<div class="stuff_thum">
-						<a href="#">
-							<img src="../../images/new/stuff_thum01.png">
-						</a>
-					</div>
-					<div class="stuff_cont">
-						<div class="fund_alert">
-							<span>주문종료</span>
-							<span class="unit_number only_english">16</span>
-							<span>일 남음</span>
+					<a href="#none" class="go_there">
+						<div class="stuff_thum">
+							<!-- <a href="#"> -->
+								<img src="../../images/new/stuff_thum01.png">
+							<!-- </a> -->
 						</div>
-						<div class="stuff_tit_box">
-							<a href="#">
-								<span class="tit">#astronaut 에어팟 하드케이스</span>
-								<span class="txt">잘 익은 블랙체리를 푹 절여 만든 잼을 식빵 위에 발라 사랑하는 이에게  전달할 때의 설레임을 닮은 향.</span>
-							</a>
-						</div>
-						<div class="stuff_price_box">
-							<strong class="price"><b class="only_english">12,730</b>원</strong>
-						</div>
-						<div class="funding_goal_box">
-							<div class="funding_progressbar">
-								<span class="funding_bar" style="width:40%"></span>
+						<div class="stuff_cont">
+							<div class="fund_alert">
+								<span>주문종료</span>
+								<span class="unit_number only_english">16</span>
+								<span>일 남음</span>
 							</div>
-							<div class="funding_goal_price_wrap">
-								<dl class="funding_goal_price_type1">
-									<dt>핫트딜 달성금액</dt>
-									<dd>
-										<span class="only_english">2,256,700</span>
-										<span>원</span>
-									</dd>
-								</dl>
-								<dl class="funding_goal_price_type2">
-									<dt>
-										<span>목표금액</span>
-										<span class="unit_price font_t">5,000,000</span>
-										<span>원</span>
-									</dt>
-									<dd>
-										<span class="unit_percent font_t">35%</span>
-										<span>달성</span>
-									</dd>
-								</dl>
+							<div class="stuff_tit_box">
+								<!-- <a href="#"> -->
+									<span class="tit">#astronaut 에어팟 하드케이스</span>
+									<span class="txt">잘 익은 블랙체리를 푹 절여 만든 잼을 식빵 위에 발라 사랑하는 이에게  전달할 때의 설레임을 닮은 향.</span>
+								<!-- </a> -->
+							</div>
+							<div class="stuff_price_box">
+								<strong class="price"><b class="only_english">12,730</b>원</strong>
+							</div>
+							<div class="funding_goal_box">
+								<div class="funding_progressbar">
+									<span class="funding_bar" style="width:40%"></span>
+								</div>
+								<div class="funding_goal_price_wrap">
+									<dl class="funding_goal_price_type1">
+										<dt>핫트딜 달성금액</dt>
+										<dd>
+											<span class="only_english">2,256,700</span>
+											<span>원</span>
+										</dd>
+									</dl>
+									<dl class="funding_goal_price_type2">
+										<dt>
+											<span>목표금액</span>
+											<span class="unit_price font_t">5,000,000</span>
+											<span>원</span>
+										</dt>
+										<dd>
+											<span class="unit_percent font_t">35%</span>
+											<span>달성</span>
+										</dd>
+									</dl>
+								</div>
 							</div>
 						</div>
-					</div>
+					</a>
 				</div>
+
 				<div class="stuff_detail_wrap">
-					<div class="stuff_thum">
-						<a href="#">
-							<img src="../../images/new/stuff_thum02.png">
-						</a>
-					</div>
-					<div class="stuff_cont">
-						<div class="fund_alert">
-							<span>주문종료</span>
-							<span class="unit_number only_english">16</span>
-							<span>일 남음</span>
+					<a href="#none" class="go_there">
+						<div class="stuff_thum">
+							<!-- <a href="#"> -->
+								<img src="../../images/new/stuff_thum01.png">
+							<!-- </a> -->
 						</div>
-						<div class="stuff_tit_box">
-							<a href="#">
-								<span class="tit">#astronaut 에어팟 하드케이스</span>
-								<span class="txt">잘 익은 블랙체리를 푹 절여 만든 잼을 식빵 위에 발라 사랑하는 이에게  전달할 때의 설레임을 닮은 향.</span>
-							</a>
-						</div>
-						<div class="stuff_price_box">
-							<strong class="price"><b class="only_english">12,730</b>원</strong>
-						</div>
-						<div class="funding_goal_box">
-							<div class="funding_progressbar">
-								<span class="funding_bar" style="width:40%"></span>
+						<div class="stuff_cont">
+							<div class="fund_alert">
+								<span>주문종료</span>
+								<span class="unit_number only_english">16</span>
+								<span>일 남음</span>
 							</div>
-							<div class="funding_goal_price_wrap">
-								<dl class="funding_goal_price_type1">
-									<dt>핫트딜 달성금액</dt>
-									<dd>
-										<span class="only_english">2,256,700</span>
-										<span>원</span>
-									</dd>
-								</dl>
-								<dl class="funding_goal_price_type2">
-									<dt>
-										<span>목표금액</span>
-										<span class="unit_price only_english">5,000,000</span>
-										<span>원</span>
-									</dt>
-									<dd>
-										<span class="unit_percent only_english">35%</span>
-										<span>달성</span>
-									</dd>
-								</dl>
+							<div class="stuff_tit_box">
+								<!-- <a href="#"> -->
+									<span class="tit">#astronaut 에어팟 하드케이스</span>
+									<span class="txt">잘 익은 블랙체리를 푹 절여 만든 잼을 식빵 위에 발라 사랑하는 이에게  전달할 때의 설레임을 닮은 향.</span>
+								<!-- </a> -->
+							</div>
+							<div class="stuff_price_box">
+								<strong class="price"><b class="only_english">12,730</b>원</strong>
+							</div>
+							<div class="funding_goal_box">
+								<div class="funding_progressbar">
+									<span class="funding_bar" style="width:40%"></span>
+								</div>
+								<div class="funding_goal_price_wrap">
+									<dl class="funding_goal_price_type1">
+										<dt>핫트딜 달성금액</dt>
+										<dd>
+											<span class="only_english">2,256,700</span>
+											<span>원</span>
+										</dd>
+									</dl>
+									<dl class="funding_goal_price_type2">
+										<dt>
+											<span>목표금액</span>
+											<span class="unit_price font_t">5,000,000</span>
+											<span>원</span>
+										</dt>
+										<dd>
+											<span class="unit_percent font_t">35%</span>
+											<span>달성</span>
+										</dd>
+									</dl>
+								</div>
 							</div>
 						</div>
-					</div>
+					</a>
 				</div>
+
 				<div class="stuff_more_btn">
 					<a href="#">더보기</a>
 				</div>
@@ -656,43 +662,51 @@ $(document).ready(function(){
 				<div class="stuff_list_wrap">
 					<ul class="stuff_list">
 						<li class="stuff_item">
-							<span class="img">
-								<img src="../../images/new/stuff_list_thum01.png">
-								<span class="end_dim">종료상품</span>
-							</span>
-							<span class="tit">#코코도르 디퓨저</span>
-							<span class="txt">120ml X 2개</span>
-							<span class="price t_r"><span class="only_english">999,999</span>원</span>
+							<a href="#none" class="go_there">
+								<span class="img">
+									<img src="../../images/new/stuff_list_thum01.png">
+									<span class="end_dim">종료상품</span>
+								</span>
+								<span class="tit">#코코도르 디퓨저</span>
+								<span class="txt">120ml X 2개</span>
+								<span class="price t_r"><span class="only_english">999,999</span>원</span>
+							</a>
 							<a href="#" class="encore_btn request">앵콜요청</a>
 						</li>
 						<li class="stuff_item">
-							<span class="img">
-								<img src="../../images/new/stuff_list_thum02.png">
-								<span class="end_dim">종료상품</span>
-							</span>
-							<span class="tit">#큐피드곰 에어팟 케이스</span>
-							<span class="txt"></span>
-							<span class="price t_r"><span class="only_english">999,999</span>원</span>
+							<a href="#none" class="go_there">
+								<span class="img">
+									<img src="../../images/new/stuff_list_thum02.png">
+									<span class="end_dim">종료상품</span>
+								</span>
+								<span class="tit">#큐피드곰 에어팟 케이스</span>
+								<span class="txt"></span>
+								<span class="price t_r"><span class="only_english">999,999</span>원</span>
+							</a>
 							<a href="#" class="encore_btn complete">앵콜완료</a>
 						</li>
 						<li class="stuff_item">
-							<span class="img">
-								<img src="../../images/new/stuff_list_thum01.png">
-								<span class="end_dim">종료상품</span>
-							</span>
-							<span class="tit">#코코도르 디퓨저</span>
-							<span class="txt">120ml X 2개</span>
-							<span class="price t_r"><span class="only_english">999,999</span>원</span>
+							<a href="#none" class="go_there">
+								<span class="img">
+									<img src="../../images/new/stuff_list_thum01.png">
+									<span class="end_dim">종료상품</span>
+								</span>
+								<span class="tit">#코코도르 디퓨저</span>
+								<span class="txt">120ml X 2개</span>
+								<span class="price t_r"><span class="only_english">999,999</span>원</span>
+							</a>
 							<a href="#" class="encore_btn request">앵콜요청</a>
 						</li>
 						<li class="stuff_item">
-							<span class="img">
-								<img src="../../images/new/stuff_list_thum02.png">
-								<span class="end_dim">종료상품</span>
-							</span>
-							<span class="tit">#큐피드곰 에어팟 케이스</span>
-							<span class="txt"></span>
-							<span class="price t_r"><span class="only_english">999,999</span>원</span>
+							<a href="#none" class="go_there">
+								<span class="img">
+									<img src="../../images/new/stuff_list_thum02.png">
+									<span class="end_dim">종료상품</span>
+								</span>
+								<span class="tit">#큐피드곰 에어팟 케이스</span>
+								<span class="txt"></span>
+								<span class="price t_r"><span class="only_english">999,999</span>원</span>
+							</a>
 							<a href="#" class="encore_btn complete">앵콜완료</a>
 						</li>
 					</ul>
@@ -709,53 +723,63 @@ $(document).ready(function(){
 				<div class="swiper-container">
 					<div class="swiper-wrapper">
 						<div class="swiper-slide stuff_item">
-							<span class="img">
-								<img src="../../images/new/stuff_list_thum02.png">
-								<span class="end_dim">종료상품</span>
-							</span>
-							<span class="tit">#큐피드곰 에어팟 케이스</span>
-							<span class="txt"></span>
-							<span class="price t_r"><span class="only_english">999,999</span>원</span>
+							<a href="#none" class="go_there">
+								<span class="img">
+									<img src="../../images/new/stuff_list_thum02.png">
+									<span class="end_dim">종료상품</span>
+								</span>
+								<span class="tit">#큐피드곰 에어팟 케이스</span>
+								<span class="txt"></span>
+								<span class="price t_r"><span class="only_english">999,999</span>원</span>
+							</a>
 							<a href="#" class="encore_btn request">앵콜요청</a>
 						</div>
 						<div class="swiper-slide stuff_item">
-							<span class="img">
-								<img src="../../images/new/stuff_list_thum02.png">
-								<span class="end_dim">종료상품</span>
-							</span>
-							<span class="tit">#큐피드곰 에어팟 케이스</span>
-							<span class="txt"></span>
-							<span class="price t_r"><span class="only_english">999,999</span>원</span>
+							<a href="#none" class="go_there">
+								<span class="img">
+									<img src="../../images/new/stuff_list_thum02.png">
+									<span class="end_dim">종료상품</span>
+								</span>
+								<span class="tit">#큐피드곰 에어팟 케이스</span>
+								<span class="txt"></span>
+								<span class="price t_r"><span class="only_english">999,999</span>원</span>
+							</a>
 							<a href="#" class="encore_btn complete">앵콜완료</a>
 						</div>
 						<div class="swiper-slide stuff_item">
-							<span class="img">
-								<img src="../../images/new/stuff_list_thum02.png">
-								<span class="end_dim">종료상품</span>
-							</span>
-							<span class="tit">#큐피드곰 에어팟 케이스</span>
-							<span class="txt"></span>
-							<span class="price t_r"><span class="only_english">999,999</span>원</span>
+							<a href="#none" class="go_there">
+								<span class="img">
+									<img src="../../images/new/stuff_list_thum02.png">
+									<span class="end_dim">종료상품</span>
+								</span>
+								<span class="tit">#큐피드곰 에어팟 케이스</span>
+								<span class="txt"></span>
+								<span class="price t_r"><span class="only_english">999,999</span>원</span>
+							</a>
 							<a href="#" class="encore_btn request">앵콜요청</a>
 						</div>
 						<div class="swiper-slide stuff_item">
-							<span class="img">
-								<img src="../../images/new/stuff_list_thum02.png">
-								<span class="end_dim">종료상품</span>
-							</span>
-							<span class="tit">#큐피드곰 에어팟 케이스</span>
-							<span class="txt"></span>
-							<span class="price t_r"><span class="only_english">999,999</span>원</span>
+							<a href="#none" class="go_there">
+								<span class="img">
+									<img src="../../images/new/stuff_list_thum02.png">
+									<span class="end_dim">종료상품</span>
+								</span>
+								<span class="tit">#큐피드곰 에어팟 케이스</span>
+								<span class="txt"></span>
+								<span class="price t_r"><span class="only_english">999,999</span>원</span>
+							</a>
 							<a href="#" class="encore_btn complete">앵콜완료</a>
 						</div>
 						<div class="swiper-slide stuff_item">
-							<span class="img">
-								<img src="../../images/new/stuff_list_thum02.png">
-								<span class="end_dim">종료상품</span>
-							</span>
-							<span class="tit">#큐피드곰 에어팟 케이스</span>
-							<span class="txt"></span>
-							<span class="price t_r"><span class="only_english">999,999</span>원</span>
+							<a href="#none" class="go_there">
+								<span class="img">
+									<img src="../../images/new/stuff_list_thum02.png">
+									<span class="end_dim">종료상품</span>
+								</span>
+								<span class="tit">#큐피드곰 에어팟 케이스</span>
+								<span class="txt"></span>
+								<span class="price t_r"><span class="only_english">999,999</span>원</span>
+							</a>
 							<a href="#" class="encore_btn request">앵콜요청</a>
 						</div>
 					</div>
